@@ -1,3 +1,14 @@
+2021-06-17  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews] Improve build summary about finding flaky test in ReRunWebKitTests
+        https://bugs.webkit.org/show_bug.cgi?id=227123
+
+        Reviewed by Jonathan Bedard.
+
+        * CISupport/ews-build/steps.py:
+        (ReRunWebKitTests.evaluateCommand):
+        * CISupport/ews-build/steps_unittest.py:
+
 2021-06-17  David Kilzer  <ddkilzer@apple.com>
 
         REGRESSION (r278536): Wrong comment character used in coverage.xcconfig
